Fixed the rounded corners not being at top of the index page Fixed IE styles possibly not being loaded on pages like /qa/, etc. Fixed <select>'s being truncated -- this makes <select> with text longer than the limit go away in IE even when expanded Fixed a few whitespace issues Fixed a few XHTML validation errors

--- a/docroot/styles/content.css
+++ b/docroot/styles/content.css
@@ -256,10 +256,6 @@
 	margin:0 160px;
 }
 
-#main-column .adv-block select {
-	width:25%;
-}
-
 #main-column .adv-block input {
     background:url(../images/block_sprites.gif) 0 -77px no-repeat;
 	width:57px;
